# sampsize

./: AUTHORS  ChangeLog  FEATURES  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  bdtr.c  ccontrol.c  certify  chk  cmdline.c  cmdline.cli.in  cmdline.h  configure  configure.in  const.c  core.h  errors.c  gamma.c  incbet.c  incbi.c  isnan.c  mconf.h  mtherr.c  ndtr.c  ndtri.c  polevl.c  power.c  protos.h  sampsize.1  sampsize.c  sampsize.lsm.in  sampsize.spec.in  size.c  system.h  unity.c
